completed title section and created carousel

--- a/src/styles/config/typography.scss
+++ b/src/styles/config/typography.scss
@@ -7,9 +7,9 @@
 /**
  * Font stack.
  */
-$FONT_DISPLAY: -apple-system, blinkmacsystemfont, 'San Francisco', 'Helvetica', sans-serif;
-$FONT_HEADING: -apple-system, blinkmacsystemfont, 'San Francisco', 'Helvetica', sans-serif;
-$FONT_BODY: -apple-system, blinkmacsystemfont, 'San Francisco', 'Helvetica', sans-serif;
+$FONT_DISPLAY: 'Helvetica', sans-serif;
+$FONT_HEADING: 'Helvetica Neue Bold', sans-serif;
+$FONT_BODY: 'Helvetica Neue Light', sans-serif;
 
 /**
  * Weights.
