--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -16,42 +16,49 @@
   <div class="container">
     <div class="row">
       <div class="col xs12">
-        <h2>
-          {{ collection.title | escape }}
-        </h2>
+        <div class="title-section">
+          <h2>
+            {{ collection.title | escape }}
+          </h2>
 
-        <p>
-          {{ collection.description }}
-        </p>
+          <p>
+            {{ collection.description }}
+          </p>
+        </div>
 
-        {% for product in collection.products limit: 8 %}
-          {% assign current_variant = product.selected_or_first_available_variant %}
+        <div class="collection-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+          {% for product in collection.products limit: 8 %}
+            {% assign current_variant = product.selected_or_first_available_variant %}
 
-          <a class="product-card" href="{{ product.url | within: collection }}">
-            <div>
-              {% if product.featured_image != blank %}
-                {{ product.featured_image | img_url: 'large' | img_tag }}
-              {% endif %}
+            <a class="product-card" href="{{ product.url | within: collection }}">
+              <div>
+                {% if product.featured_image != blank %}
+                  {{ product.featured_image | img_url: 'large' | img_tag }}
+                {% endif %}
 
-              <span
-                class="product-card__add-to-cart"
-                data-quantity="1"
-                data-variant-id="{{ current_variant.id }}"
-                js-ajax-cart="addToCart"
-              >
-                Add to cart
-              </span>
-            </div>
+                <span
+                  class="product-card__add-to-cart"
+                  data-quantity="1"
+                  data-variant-id="{{ current_variant.id }}"
+                  js-ajax-cart="addToCart"
+                >
+                  Add to cart
+                </span>
+              </div>
 
-            <div>
-              <p>{{ product.title | escape }}</p>
+              <div>
+                <p>{{ product.title | escape }}</p>
 
-              <span>
-                {% include 'product-price' %}
-              </span>
-            </div>
-          </a>
-        {% endfor %}
+                <span>
+                  {% include 'product-price' %}
+                </span>
+              </div>
+            </a>
+          {% endfor %}
+        <div class="product-card__add-to-cart">
+          View Collection
+        </div>
+        </div>
       </div>
     </div>
   </div>
