--- a/src/styles/components/product-card.scss
+++ b/src/styles/components/product-card.scss
@@ -13,7 +13,7 @@
   width: 100%;
 
   &__add-to-cart {
-    background-color: $COLOR_SUPPORT_ERROR;
+    // background-color: $COLOR_SUPPORT_ERROR;
     color: $COLOR_TEXT_INVERSE;
     padding: $SPACING_S $SPACING_XL;
     text-decoration: none;
