--- a/src/styles/sections/featured-collection.scss
+++ b/src/styles/sections/featured-collection.scss
@@ -7,3 +7,56 @@
 .featured-collection {
   background-color: $COLOR_BACKGROUND_WHITE;
 }
+
+.title-section {
+  text-align: center;
+  padding: $SPACING_L;
+
+  h2 {
+    color: #003366;
+    font-family: $FONT_HEADING;
+    font-size: 36px;
+
+  }
+  
+  p {
+    color: #9B9B9B;
+    font-family: $FONT_BODY;
+    font-weight: $WEIGHT_LIGHT;
+    line-height: $LINE_HEIGHT_BODY;
+    letter-spacing: $LETTER_SPACING_BODY;
+    margin: auto;
+
+    // desktop mode
+    @media screen and ( min-width: 768px ) {
+      width: 50%;      
+    }
+  }
+
+}
+
+.collection-carousel {
+  padding: $SPACING_L;
+  width: 100%;
+
+  @media screen and ( min-width: 768px ) {
+    /* half-width cells for larger devices */
+    .product-card { 
+      width: 50%; 
+    }
+  }
+}
+
+
+.product-card {
+  p {
+    color: #003366;
+    font-weight: bold;
+  }
+
+  span {
+    color: #9B9B9B;
+    font-weight: $WEIGHT_LIGHT;
+  }
+
+}
