--- a/src/styles/components/product-card.scss
+++ b/src/styles/components/product-card.scss
@@ -7,13 +7,15 @@
 .product-card {
   $parent: &;
   color: $COLOR_TEXT_PRIMARY;
-  width: 100%;
   text-decoration: none;
-  align-items: center;
+  width: 100%;
+  padding-left: 10%;
+  transition: .3s;
 
   p {
     color: #003366;
     font-weight: $WEIGHT_BOLD;
+    width: 80%;
   }
 
   a, a:hover {
@@ -25,10 +27,10 @@
   }
 
   &__sale-tag {
-    position: absolute;
     color: $COLOR_TEXT_INVERSE;
     background-color: #003366;
     font-weight: $WEIGHT_BOLD;
+    position: absolute;
     padding: $SPACING_XS $SPACING_L;
     top: 2%;
     right: 20%;
@@ -37,13 +39,29 @@
   &__add-to-cart {
     color: $COLOR_TEXT_INVERSE;
     background-color: #003366;
-    padding: $SPACING_S $SPACING_XL;
+    opacity: 90%;
     text-decoration: none;
+    text-align: center;
+    font-weight: $WEIGHT_BOLD;
+    position: absolute;
+    padding: $SPACING_L $SPACING_XL;
+    bottom: 5%;
+    left: 7%;
+    width: 70%;
+    // desktop mode
+    @media screen and ( min-width: 768px ) {
+      display: none;
+    }
   }
+  
+  // desktop mode
+  @media screen and ( min-width: 768px ) {
+    padding-left: 0;  
 
-  @include mq($from: small) {
-    &__add-to-cart {
-      background-color: #003366;
+    .product-card:hover &__add-to-cart {
+      display: block;
+      color: #003366;
+      background-color: $COLOR_TEXT_INVERSE;
     }
   }
 }
@@ -65,4 +83,8 @@
 /* hide disabled button */
 .flickity-button:disabled {
   display: none;
+}
+/* reposition bottom dots */
+.flickity-page-dots {
+  position: relative;
 }
