--- a/src/sections/featured-collection.liquid
+++ b/src/sections/featured-collection.liquid
@@ -43,15 +43,16 @@
                       <div class="product-card__sale-tag">Sale</div>
                     {% endif %}
                   {% endfor %}
-                  <span
+                </a>
+                  <button
                     class="product-card__add-to-cart"
                     data-quantity="1"
                     data-variant-id="{{ current_variant.id }}"
+                    id="{{ current_variant.id }}"
                     js-ajax-cart="addToCart"
                   >
                     Add to cart
-                  </span>
-                </a>
+                  </button>
               </div>
 
               <p>{{ product.title | escape }}</p>
@@ -71,6 +72,18 @@
     </div>
   </div>
 </section>
+
+<script>
+  const currentItem = document.querySelector('.product-card__add-to-cart');
+  currentItem.addEventListener('click', (e) => {
+    window.console.log(e.target.id)
+    fetch('/cart.json')
+      .then(r => r.json())
+      .then(data => window.console.log(data.item_count))
+  })
+
+
+</script>
 
 {% schema %}
   {
