--- a/src/styles/components/product-card.scss
+++ b/src/styles/components/product-card.scss
@@ -13,7 +13,7 @@
   transition: .3s;
 
   p {
-    color: #003366;
+    color: rgb(0, 51, 102);
     font-weight: $WEIGHT_BOLD;
     width: 80%;
   }
@@ -28,7 +28,7 @@
 
   &__sale-tag {
     color: $COLOR_TEXT_INVERSE;
-    background-color: #003366;
+    background-color: rgb(0, 51, 102);
     font-weight: $WEIGHT_BOLD;
     position: absolute;
     padding: $SPACING_XS $SPACING_L;
@@ -38,7 +38,8 @@
   
   &__add-to-cart {
     color: $COLOR_TEXT_INVERSE;
-    background-color: #003366;
+    background-color: rgb(0, 51, 102);
+    border: none;
     opacity: 90%;
     text-decoration: none;
     text-align: center;
@@ -60,31 +61,30 @@
 
     .product-card:hover &__add-to-cart {
       display: block;
-      color: #003366;
+      color: rgb(0, 51, 102);
       background-color: $COLOR_TEXT_INVERSE;
     }
   }
 }
 
-/** Styling for carousel **/
-/* no circle */
+// Styling for carousel
 .flickity-button {
   background: transparent;
 }
-/* previous & next buttons */
+
 .flickity-prev-next-button {
   width: 50px;
   height: 50px;
 }
-/* icon color */
+
 .flickity-button-icon {
-  fill: #333333;
+  fill: rgb(51, 51, 51);
 }
-/* hide disabled button */
+
 .flickity-button:disabled {
   display: none;
 }
-/* reposition bottom dots */
+
 .flickity-page-dots {
   position: relative;
 }
